--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -1,4 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.MonitoredBy-0\#ChannelRegularConversion=__NULL
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.MonitoredBy-0\#ChannelRegularConversion=__NULL
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 BOOTPATH.BootPathName=LEGACY
 BOOTPATH.IPParameters=BootPathName
 BOOTPATH.UserSelectedBootPath=LEGACY
@@ -7,72 +22,168 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 ETH.IPParameters=MediaInterface
-ETH.MediaInterface=HAL_ETH_MII_MODE
+ETH.MediaInterface=HAL_ETH_RMII_MODE
 FDCAN1.CalculateBaudRateNominal=1333333
 FDCAN1.CalculateTimeBitNominal=750
 FDCAN1.CalculateTimeQuantumNominal=250.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32H563ZIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
-Mcu.IP0=BOOTPATH
-Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=SYS
-Mcu.IP11=THREADX
-Mcu.IP12=USART3
-Mcu.IP2=ETH
-Mcu.IP3=FDCAN1
-Mcu.IP4=ICACHE
-Mcu.IP5=MEMORYMAP
-Mcu.IP6=NETXDUO
-Mcu.IP7=NVIC
-Mcu.IP8=PWR
-Mcu.IP9=RCC
-Mcu.IPNb=13
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP10=NETXDUO
+Mcu.IP11=NVIC
+Mcu.IP12=PWR
+Mcu.IP13=RCC
+Mcu.IP14=SYS
+Mcu.IP15=THREADX
+Mcu.IP2=BOOTPATH
+Mcu.IP3=CORTEX_M33_NS
+Mcu.IP4=ETH
+Mcu.IP5=FDCAN1
+Mcu.IP6=ICACHE
+Mcu.IP7=IWDG
+Mcu.IP8=LPUART1
+Mcu.IP9=MEMORYMAP
+Mcu.IPNb=16
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
-Mcu.Pin1=PC1
-Mcu.Pin10=PC4
-Mcu.Pin11=PC5
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB12
-Mcu.Pin15=PB15
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
-Mcu.Pin2=PC2
-Mcu.Pin20=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin21=VP_ICACHE_VS_ICACHE
-Mcu.Pin22=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin23=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin24=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin25=VP_PWR_VS_SECSignals
-Mcu.Pin26=VP_PWR_VS_LPOM
-Mcu.Pin27=VP_SYS_VS_tim1
-Mcu.Pin28=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin29=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin3=PC3
-Mcu.Pin30=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin4=PA0
-Mcu.Pin5=PA1
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PA7
-Mcu.PinsNb=31
+Mcu.Pin1=PE3
+Mcu.Pin10=PF2
+Mcu.Pin100=PG12
+Mcu.Pin101=PG13
+Mcu.Pin102=PG14
+Mcu.Pin103=PG15
+Mcu.Pin104=PB3(JTDO/TRACESWO)
+Mcu.Pin105=PB4(NJTRST)
+Mcu.Pin106=PB5
+Mcu.Pin107=PB6
+Mcu.Pin108=PB7
+Mcu.Pin109=PB8
+Mcu.Pin11=PF3
+Mcu.Pin110=PB9
+Mcu.Pin111=PE0
+Mcu.Pin112=VP_CORTEX_M33_NS_VS_Hclk
+Mcu.Pin113=VP_ICACHE_VS_ICACHE
+Mcu.Pin114=VP_IWDG_VS_IWDG
+Mcu.Pin115=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin116=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin117=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin118=VP_PWR_VS_SECSignals
+Mcu.Pin119=VP_PWR_VS_LPOM
+Mcu.Pin12=PF4
+Mcu.Pin120=VP_SYS_VS_tim1
+Mcu.Pin121=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin122=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin123=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin13=PF5
+Mcu.Pin14=PF6
+Mcu.Pin15=PF7
+Mcu.Pin16=PF8
+Mcu.Pin17=PF9
+Mcu.Pin18=PF10
+Mcu.Pin19=PH0-OSC_IN(PH0)
+Mcu.Pin2=PE4
+Mcu.Pin20=PH1-OSC_OUT(PH1)
+Mcu.Pin21=PC0
+Mcu.Pin22=PC1
+Mcu.Pin23=PC2
+Mcu.Pin24=PC3
+Mcu.Pin25=PA0
+Mcu.Pin26=PA1
+Mcu.Pin27=PA2
+Mcu.Pin28=PA3
+Mcu.Pin29=PA4
+Mcu.Pin3=PE5
+Mcu.Pin30=PA5
+Mcu.Pin31=PA6
+Mcu.Pin32=PA7
+Mcu.Pin33=PC4
+Mcu.Pin34=PC5
+Mcu.Pin35=PB0
+Mcu.Pin36=PB1
+Mcu.Pin37=PB2
+Mcu.Pin38=PF11
+Mcu.Pin39=PF12
+Mcu.Pin4=PE6
+Mcu.Pin40=PF13
+Mcu.Pin41=PF14
+Mcu.Pin42=PF15
+Mcu.Pin43=PG0
+Mcu.Pin44=PG1
+Mcu.Pin45=PE7
+Mcu.Pin46=PE8
+Mcu.Pin47=PE9
+Mcu.Pin48=PE10
+Mcu.Pin49=PE11
+Mcu.Pin5=PC13
+Mcu.Pin50=PE12
+Mcu.Pin51=PE13
+Mcu.Pin52=PE14
+Mcu.Pin53=PE15
+Mcu.Pin54=PB10
+Mcu.Pin55=PB12
+Mcu.Pin56=PB13
+Mcu.Pin57=PB14
+Mcu.Pin58=PB15
+Mcu.Pin59=PD8
+Mcu.Pin6=PC14-OSC32_IN(OSC32_IN)
+Mcu.Pin60=PD9
+Mcu.Pin61=PD10
+Mcu.Pin62=PD11
+Mcu.Pin63=PD12
+Mcu.Pin64=PD13
+Mcu.Pin65=PD14
+Mcu.Pin66=PD15
+Mcu.Pin67=PG2
+Mcu.Pin68=PG3
+Mcu.Pin69=PG4
+Mcu.Pin7=PC15-OSC32_OUT(OSC32_OUT)
+Mcu.Pin70=PG5
+Mcu.Pin71=PG6
+Mcu.Pin72=PG7
+Mcu.Pin73=PG8
+Mcu.Pin74=PC6
+Mcu.Pin75=PC7
+Mcu.Pin76=PC8
+Mcu.Pin77=PC9
+Mcu.Pin78=PA8
+Mcu.Pin79=PA9
+Mcu.Pin8=PF0
+Mcu.Pin80=PA10
+Mcu.Pin81=PA11
+Mcu.Pin82=PA12
+Mcu.Pin83=PA13(JTMS/SWDIO)
+Mcu.Pin84=PA14(JTCK/SWCLK)
+Mcu.Pin85=PA15(JTDI)
+Mcu.Pin86=PC10
+Mcu.Pin87=PC11
+Mcu.Pin88=PC12
+Mcu.Pin89=PD0
+Mcu.Pin9=PF1
+Mcu.Pin90=PD1
+Mcu.Pin91=PD2
+Mcu.Pin92=PD3
+Mcu.Pin93=PD4
+Mcu.Pin94=PD5
+Mcu.Pin95=PD6
+Mcu.Pin96=PD7
+Mcu.Pin97=PG9
+Mcu.Pin98=PG10
+Mcu.Pin99=PG11
+Mcu.PinsNb=124
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
-MxCube.Version=6.14.1
-MxDb.Version=DB.6.0.141
+MxCube.Version=6.15.0
+MxDb.Version=DB.6.0.150
 NETXDUO.ETH_ON=1
 NETXDUO.IPParameters=ETH_ON
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -92,48 +203,350 @@ NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA0.Mode=MII
-PA0.Signal=ETH_CRS
-PA1.Mode=MII
-PA1.Signal=ETH_RX_CLK
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=ADC12_INP0
+PA0.Locked=true
+PA0.Signal=ADCx_INP0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ETH_RMII_REF_CLK
+PA1.Locked=true
+PA1.Mode=RMII
+PA1.Signal=ETH_REF_CLK
+PA10.Locked=true
+PA10.Mode=Asynchronous
+PA10.Signal=LPUART1_RX
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
 PA12.Mode=FDCAN_Activate
 PA12.Signal=FDCAN1_TX
-PA2.Mode=MII
+PA13(JTMS/SWDIO).GPIOParameters=GPIO_Label
+PA13(JTMS/SWDIO).GPIO_Label=JTMS
+PA13(JTMS/SWDIO).Locked=true
+PA13(JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
+PA14(JTCK/SWCLK).GPIOParameters=GPIO_Label
+PA14(JTCK/SWCLK).GPIO_Label=JTCK
+PA14(JTCK/SWCLK).Locked=true
+PA14(JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA15(JTDI).GPIOParameters=GPIO_Label
+PA15(JTDI).GPIO_Label=JTDI
+PA15(JTDI).Locked=true
+PA15(JTDI).Signal=DEBUG_JTDI
+PA2.Locked=true
+PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
-PA3.Mode=MII
-PA3.Signal=ETH_COL
-PA5.Mode=MII
-PA5.Signal=ETH_TX_EN
-PA7.Mode=MII
-PA7.Signal=ETH_RX_DV
-PB0.Mode=MII
-PB0.Signal=ETH_RXD2
-PB1.Mode=MII
-PB1.Signal=ETH_RXD3
-PB12.Mode=MII
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=ADC12_INP15
+PA3.Locked=true
+PA3.Signal=ADCx_INP15
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=ADC12_INP18
+PA4.Locked=true
+PA4.Signal=ADCx_INP18
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=ADC12_INP19
+PA5.Locked=true
+PA5.Signal=ADCx_INP19
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=ADC12_INP3
+PA6.Locked=true
+PA6.Signal=ADCx_INP3
+PA7.Mode=RMII
+PA7.Signal=ETH_CRS_DV
+PA8.Locked=true
+PA9.Locked=true
+PA9.Mode=Asynchronous
+PA9.Signal=LPUART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=ADC12_INP9
+PB0.Locked=true
+PB0.Signal=ADCx_INP9
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=ADC12_INP5
+PB1.Locked=true
+PB1.Signal=ADCx_INP5
+PB10.Locked=true
+PB10.Signal=SPI2_SCK
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=ETH_RMII_TXD0
+PB12.Locked=true
+PB12.Mode=RMII
 PB12.Signal=ETH_TXD0
-PB15.Mode=MII
+PB13.Locked=true
+PB14.Locked=true
+PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=ETH_RMII_TXD1
+PB15.Locked=true
+PB15.Mode=RMII
 PB15.Signal=ETH_TXD1
-PC1.Mode=MII
+PB2.Locked=true
+PB3(JTDO/TRACESWO).GPIOParameters=GPIO_Label
+PB3(JTDO/TRACESWO).GPIO_Label=JTDO
+PB3(JTDO/TRACESWO).Locked=true
+PB3(JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
+PB4(NJTRST).Locked=true
+PB5.Locked=true
+PB6.Locked=true
+PB6.Signal=I2C1_SCL
+PB7.Locked=true
+PB7.Signal=I2C1_SDA
+PB8.Locked=true
+PB9.Locked=true
+PB9.Signal=SPI2_NSS
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=ADC12_INP10
+PC0.Locked=true
+PC0.Signal=ADCx_INP10
+PC1.Locked=true
+PC1.Mode=RMII
 PC1.Signal=ETH_MDC
-PC2.Mode=MII
-PC2.Signal=ETH_TXD2
-PC3.Mode=MII
-PC3.Signal=ETH_TX_CLK
-PC4.Mode=MII
+PC10.Locked=true
+PC11.Locked=true
+PC12.Locked=true
+PC13.Locked=true
+PC14-OSC32_IN(OSC32_IN).GPIOParameters=GPIO_Label
+PC14-OSC32_IN(OSC32_IN).GPIO_Label=PC14-OSC32_IN
+PC14-OSC32_IN(OSC32_IN).Mode=LSE-External-Clock-Source
+PC14-OSC32_IN(OSC32_IN).Signal=RCC_OSC32_IN
+PC15-OSC32_OUT(OSC32_OUT).GPIOParameters=GPIO_Label
+PC15-OSC32_OUT(OSC32_OUT).GPIO_Label=PC15-OSC32_OUT
+PC15-OSC32_OUT(OSC32_OUT).Locked=true
+PC15-OSC32_OUT(OSC32_OUT).Signal=RCC_OSC32_OUT
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=ADC12_INP12
+PC2.Locked=true
+PC2.Signal=ADCx_INP12
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=ADC12_INP13
+PC3.Locked=true
+PC3.Signal=ADCx_INP13
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=ETH_RMII_RXD0
+PC4.Locked=true
+PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
-PC5.Mode=MII
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=ETH_RMI_RXD1
+PC5.Locked=true
+PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.Locked=true
+PC7.Locked=true
+PC8.Locked=true
+PC9.Locked=true
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=PD0_IO
+PD0.Locked=true
+PD0.Signal=GPIO_Output
+PD1.GPIOParameters=GPIO_Label
+PD1.GPIO_Label=PD1_IO
+PD1.Locked=true
+PD1.Signal=GPIO_Input
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=PD10_IO
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=PD11_IO
+PD11.Locked=true
+PD11.Signal=GPIO_Input
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=PD12_IO
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=PD13_IO
+PD13.Locked=true
+PD13.Signal=GPIO_Input
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=PD14_IO
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=PD15_IO
+PD15.Locked=true
+PD15.Signal=GPIO_Input
+PD2.GPIOParameters=GPIO_Label
+PD2.GPIO_Label=PD2_IO
+PD2.Locked=true
+PD2.Signal=GPIO_Output
+PD3.GPIOParameters=GPIO_Label
+PD3.GPIO_Label=PD3_IO
+PD3.Locked=true
+PD3.Signal=GPIO_Input
+PD4.GPIOParameters=GPIO_Label
+PD4.GPIO_Label=PD4_IO
+PD4.Locked=true
+PD4.Signal=GPIO_Output
+PD5.GPIOParameters=GPIO_Label
+PD5.GPIO_Label=PD5_IO
+PD5.Locked=true
+PD5.Signal=GPIO_Input
+PD6.GPIOParameters=GPIO_Label
+PD6.GPIO_Label=PD6_IO
+PD6.Locked=true
+PD6.Signal=GPIO_Output
+PD7.GPIOParameters=GPIO_Label
+PD7.GPIO_Label=PD7_IO
+PD7.Locked=true
+PD7.Signal=GPIO_Input
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=PD8_IO
 PD8.Locked=true
-PD8.Mode=Asynchronous
-PD8.Signal=USART3_TX
+PD8.Signal=GPIO_Output
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=PD9_IO
 PD9.Locked=true
-PD9.Mode=Asynchronous
-PD9.Signal=USART3_RX
-PE2.Mode=MII
-PE2.Signal=ETH_TXD3
+PD9.Signal=GPIO_Input
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=PE0_IO
+PE0.Locked=true
+PE0.Signal=GPIO_Input
+PE10.GPIOParameters=PinState,GPIO_Label
+PE10.GPIO_Label=PE10_IO
+PE10.Locked=true
+PE10.PinState=GPIO_PIN_SET
+PE10.Signal=GPIO_Output
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=PE11_IO
+PE11.Locked=true
+PE11.Signal=GPIO_Input
+PE12.GPIOParameters=GPIO_Label
+PE12.GPIO_Label=PE12_IO
+PE12.Locked=true
+PE12.Signal=GPIO_Output
+PE13.GPIOParameters=GPIO_Label
+PE13.GPIO_Label=PE13_IO
+PE13.Locked=true
+PE13.Signal=GPIO_Input
+PE14.GPIOParameters=GPIO_Label
+PE14.GPIO_Label=RTDS_GPIO
+PE14.Locked=true
+PE14.Signal=GPIO_Output
+PE15.Locked=true
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=PE2_IO
+PE2.Locked=true
+PE2.Signal=GPIO_Input
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=PE3_IO
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=PE4_IO
+PE4.Locked=true
+PE4.Signal=GPIO_Input
+PE5.GPIOParameters=GPIO_Label
+PE5.GPIO_Label=PE5_IO
+PE5.Locked=true
+PE5.Signal=GPXTI5
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=PE6_IO
+PE6.Locked=true
+PE6.Signal=GPXTI6
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=PHY_IRQ
+PE7.Locked=true
+PE7.Signal=GPXTI7
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=PE8_IO
+PE8.Locked=true
+PE8.Signal=GPIO_Input
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=PE9_IO
+PE9.Locked=true
+PE9.Signal=GPIO_Input
+PF0.Locked=true
+PF0.Signal=I2C2_SDA
+PF1.Locked=true
+PF1.Signal=I2C2_SCL
+PF10.GPIOParameters=GPIO_Label
+PF10.GPIO_Label=PF10_IO
+PF10.Locked=true
+PF10.Signal=GPIO_Input
+PF11.Locked=true
+PF11.Signal=ADC1_INP2
+PF12.Locked=true
+PF12.Mode=IN6-Single-Ended
+PF12.Signal=ADC1_INP6
+PF13.Locked=true
+PF13.Signal=ADC2_INP2
+PF14.Locked=true
+PF14.Mode=IN6-Single-Ended
+PF14.Signal=ADC2_INP6
+PF15.GPIOParameters=GPIO_Label
+PF15.GPIO_Label=PF15_IO
+PF15.Locked=true
+PF15.Signal=GPIO_Input
+PF2.GPIOParameters=GPIO_Label
+PF2.GPIO_Label=PF2_IO
+PF2.Locked=true
+PF2.Signal=GPIO_Output
+PF3.GPIOParameters=GPIO_Label
+PF3.GPIO_Label=PF3_IO
+PF3.Locked=true
+PF3.Signal=GPIO_Input
+PF4.GPIOParameters=GPIO_Label
+PF4.GPIO_Label=PF4_IO
+PF4.Locked=true
+PF4.Signal=GPIO_Output
+PF5.GPIOParameters=GPIO_Label
+PF5.GPIO_Label=PF5_IO
+PF5.Locked=true
+PF5.Signal=GPIO_Input
+PF6.GPIOParameters=GPIO_Label
+PF6.GPIO_Label=PF6_IO
+PF6.Locked=true
+PF6.Signal=GPIO_Input
+PF7.GPIOParameters=GPIO_Label
+PF7.GPIO_Label=PF7_IO
+PF7.Locked=true
+PF7.Signal=GPIO_Input
+PF8.GPIOParameters=GPIO_Label
+PF8.GPIO_Label=PF8_IO
+PF8.Locked=true
+PF8.Signal=GPIO_Input
+PF9.GPIOParameters=GPIO_Label
+PF9.GPIO_Label=PF9_IO
+PF9.Locked=true
+PF9.Signal=GPIO_Input
+PG0.Locked=true
+PG1.Locked=true
+PG1.Signal=SPI2_MOSI
+PG10.Locked=true
+PG11.GPIOParameters=GPIO_Label
+PG11.GPIO_Label=ETH_RMII_TX_EN
+PG11.Locked=true
+PG11.Mode=RMII
+PG11.Signal=ETH_TX_EN
+PG12.Locked=true
+PG13.Locked=true
+PG14.GPIOParameters=GPIO_Label
+PG14.GPIO_Label=WATCHDOG
+PG14.Locked=true
+PG14.Signal=GPIO_Output
+PG15.GPIOParameters=PinState,GPIO_Label
+PG15.GPIO_Label=FAULT_MCU
+PG15.Locked=true
+PG15.PinState=GPIO_PIN_SET
+PG15.Signal=GPIO_Output
+PG2.Locked=true
+PG3.Locked=true
+PG4.Locked=true
+PG5.Locked=true
+PG6.Locked=true
+PG7.Locked=true
+PG8.Locked=true
+PG9.Locked=true
+PH0-OSC_IN(PH0).GPIOParameters=GPIO_Label
+PH0-OSC_IN(PH0).GPIO_Label=PH0-OSC_IN
+PH0-OSC_IN(PH0).Mode=HSE-External-Oscillator
+PH0-OSC_IN(PH0).Signal=RCC_OSC_IN
+PH1-OSC_OUT(PH1).GPIOParameters=GPIO_Label
+PH1-OSC_OUT(PH1).GPIO_Label=PH1-OSC_OUT
+PH1-OSC_OUT(PH1).Locked=true
+PH1-OSC_OUT(PH1).Mode=HSE-External-Oscillator
+PH1-OSC_OUT(PH1).Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -166,7 +579,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_NetXDuo_Init-NETXDUO-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -252,17 +665,53 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
+SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
+SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
+SH.ADCx_INP0.ConfNb=2
+SH.ADCx_INP10.0=ADC1_INP10
+SH.ADCx_INP10.1=ADC2_INP10
+SH.ADCx_INP10.ConfNb=2
+SH.ADCx_INP12.0=ADC1_INP12
+SH.ADCx_INP12.1=ADC2_INP12
+SH.ADCx_INP12.ConfNb=2
+SH.ADCx_INP13.0=ADC1_INP13,IN13-Single-Ended
+SH.ADCx_INP13.1=ADC2_INP13,IN13-Single-Ended
+SH.ADCx_INP13.ConfNb=2
+SH.ADCx_INP15.0=ADC1_INP15,IN15-Single-Ended
+SH.ADCx_INP15.1=ADC2_INP15,IN15-Single-Ended
+SH.ADCx_INP15.ConfNb=2
+SH.ADCx_INP18.0=ADC1_INP18
+SH.ADCx_INP18.1=ADC2_INP18
+SH.ADCx_INP18.ConfNb=2
+SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
+SH.ADCx_INP19.1=ADC2_INP19,IN19-Single-Ended
+SH.ADCx_INP19.ConfNb=2
+SH.ADCx_INP3.0=ADC1_INP3
+SH.ADCx_INP3.1=ADC2_INP3
+SH.ADCx_INP3.ConfNb=2
+SH.ADCx_INP5.0=ADC1_INP5
+SH.ADCx_INP5.1=ADC2_INP5
+SH.ADCx_INP5.ConfNb=2
+SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
+SH.ADCx_INP9.1=ADC2_INP9,IN9-Single-Ended
+SH.ADCx_INP9.ConfNb=2
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=false
-USART3.IPParameters=VirtualMode-Asynchronous
-USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
 VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
 VP_CORTEX_M33_NS_VS_Hclk.Signal=CORTEX_M33_NS_VS_Hclk
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
