--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -1,11 +1,61 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC1.Channel-8\#ChannelRegularConversion=ADC_CHANNEL_18
+ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_19
+ADC1.ContinuousConvMode=ENABLE
+ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,MonitoredBy-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,MonitoredBy-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,MonitoredBy-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,MonitoredBy-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,MonitoredBy-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,MonitoredBy-9\#ChannelRegularConversion,NbrOfConversion
 ADC1.MonitoredBy-0\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-1\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-2\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-3\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-4\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-5\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-6\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-7\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-8\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-9\#ChannelRegularConversion=__NULL
+ADC1.NbrOfConversion=10
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-7\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-8\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-9\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-2\#ChannelRegularConversion=3
+ADC1.Rank-3\#ChannelRegularConversion=4
+ADC1.Rank-4\#ChannelRegularConversion=5
+ADC1.Rank-5\#ChannelRegularConversion=6
+ADC1.Rank-6\#ChannelRegularConversion=7
+ADC1.Rank-7\#ChannelRegularConversion=8
+ADC1.Rank-8\#ChannelRegularConversion=9
+ADC1.Rank-9\#ChannelRegularConversion=10
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag
@@ -28,6 +78,13 @@ FDCAN1.CalculateTimeBitNominal=750
 FDCAN1.CalculateTimeQuantumNominal=250.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
+GPDMA1.CIRCULARMODE_GPDMACH5=ENABLE
+GPDMA1.DESTDATAWIDTH_GPDMACH5=DMA_DEST_DATAWIDTH_HALFWORD
+GPDMA1.DESTINC_GPDMACH5=DMA_DINC_INCREMENTED
+GPDMA1.IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5=__NULL
+GPDMA1.IPParameters=CIRCULARMODE_GPDMACH5,IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5,REQUEST_GPDMACH5,SRCDATAWIDTH_GPDMACH5,DESTINC_GPDMACH5,DESTDATAWIDTH_GPDMACH5
+GPDMA1.REQUEST_GPDMACH5=GPDMA1_REQUEST_ADC1
+GPDMA1.SRCDATAWIDTH_GPDMACH5=DMA_SRC_DATAWIDTH_HALFWORD
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -37,21 +94,22 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=NETXDUO
-Mcu.IP11=NVIC
-Mcu.IP12=PWR
-Mcu.IP13=RCC
-Mcu.IP14=SYS
-Mcu.IP15=THREADX
+Mcu.IP10=MEMORYMAP
+Mcu.IP11=NETXDUO
+Mcu.IP12=NVIC
+Mcu.IP13=PWR
+Mcu.IP14=RCC
+Mcu.IP15=SYS
+Mcu.IP16=THREADX
 Mcu.IP2=BOOTPATH
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=ETH
 Mcu.IP5=FDCAN1
-Mcu.IP6=ICACHE
-Mcu.IP7=IWDG
-Mcu.IP8=LPUART1
-Mcu.IP9=MEMORYMAP
-Mcu.IPNb=16
+Mcu.IP6=GPDMA1
+Mcu.IP7=ICACHE
+Mcu.IP8=IWDG
+Mcu.IP9=LPUART1
+Mcu.IPNb=17
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -71,18 +129,19 @@ Mcu.Pin11=PF3
 Mcu.Pin110=PB9
 Mcu.Pin111=PE0
 Mcu.Pin112=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin113=VP_ICACHE_VS_ICACHE
-Mcu.Pin114=VP_IWDG_VS_IWDG
-Mcu.Pin115=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin116=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin117=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin118=VP_PWR_VS_SECSignals
-Mcu.Pin119=VP_PWR_VS_LPOM
+Mcu.Pin113=VP_GPDMA1_VS_GPDMACH5
+Mcu.Pin114=VP_ICACHE_VS_ICACHE
+Mcu.Pin115=VP_IWDG_VS_IWDG
+Mcu.Pin116=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin117=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin118=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin119=VP_PWR_VS_SECSignals
 Mcu.Pin12=PF4
-Mcu.Pin120=VP_SYS_VS_tim1
-Mcu.Pin121=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin122=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin123=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin120=VP_PWR_VS_LPOM
+Mcu.Pin121=VP_SYS_VS_tim1
+Mcu.Pin122=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin123=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin124=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -178,7 +237,7 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=124
+Mcu.PinsNb=125
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -189,6 +248,7 @@ NETXDUO.IPParameters=ETH_ON
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
+NVIC.GPDMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -470,7 +530,6 @@ PF10.Signal=GPIO_Input
 PF11.Locked=true
 PF11.Signal=ADC1_INP2
 PF12.Locked=true
-PF12.Mode=IN6-Single-Ended
 PF12.Signal=ADC1_INP6
 PF13.Locked=true
 PF13.Signal=ADC2_INP2
@@ -582,7 +641,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_NetXDuo_Init-NETXDUO-false-HAL-false,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -668,14 +727,14 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
-SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
+SH.ADCx_INP0.0=ADC2_INP0,IN0-Single-Ended
+SH.ADCx_INP0.1=ADC1_INP0,IN0-Single-Ended
 SH.ADCx_INP0.ConfNb=2
-SH.ADCx_INP10.0=ADC1_INP10
-SH.ADCx_INP10.1=ADC2_INP10
+SH.ADCx_INP10.0=ADC2_INP10
+SH.ADCx_INP10.1=ADC1_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=2
-SH.ADCx_INP12.0=ADC1_INP12
-SH.ADCx_INP12.1=ADC2_INP12
+SH.ADCx_INP12.0=ADC2_INP12
+SH.ADCx_INP12.1=ADC1_INP12,IN12-Single-Ended
 SH.ADCx_INP12.ConfNb=2
 SH.ADCx_INP13.0=ADC1_INP13,IN13-Single-Ended
 SH.ADCx_INP13.1=ADC2_INP13,IN13-Single-Ended
@@ -683,17 +742,17 @@ SH.ADCx_INP13.ConfNb=2
 SH.ADCx_INP15.0=ADC1_INP15,IN15-Single-Ended
 SH.ADCx_INP15.1=ADC2_INP15,IN15-Single-Ended
 SH.ADCx_INP15.ConfNb=2
-SH.ADCx_INP18.0=ADC1_INP18
-SH.ADCx_INP18.1=ADC2_INP18
+SH.ADCx_INP18.0=ADC2_INP18
+SH.ADCx_INP18.1=ADC1_INP18,IN18-Single-Ended
 SH.ADCx_INP18.ConfNb=2
 SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
 SH.ADCx_INP19.1=ADC2_INP19,IN19-Single-Ended
 SH.ADCx_INP19.ConfNb=2
-SH.ADCx_INP3.0=ADC1_INP3
-SH.ADCx_INP3.1=ADC2_INP3
+SH.ADCx_INP3.0=ADC2_INP3
+SH.ADCx_INP3.1=ADC1_INP3,IN3-Single-Ended
 SH.ADCx_INP3.ConfNb=2
-SH.ADCx_INP5.0=ADC1_INP5
-SH.ADCx_INP5.1=ADC2_INP5
+SH.ADCx_INP5.0=ADC2_INP5
+SH.ADCx_INP5.1=ADC1_INP5,IN5-Single-Ended
 SH.ADCx_INP5.ConfNb=2
 SH.ADCx_INP9.0=ADC1_INP9,IN9-Single-Ended
 SH.ADCx_INP9.1=ADC2_INP9,IN9-Single-Ended
@@ -711,6 +770,8 @@ VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
 VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
 VP_CORTEX_M33_NS_VS_Hclk.Signal=CORTEX_M33_NS_VS_Hclk
+VP_GPDMA1_VS_GPDMACH5.Mode=SIMPLEREQUEST_GPDMACH5
+VP_GPDMA1_VS_GPDMACH5.Signal=GPDMA1_VS_GPDMACH5
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
