--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -92,10 +92,10 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
-FDCAN1.CalculateBaudRateNominal=1333333
-FDCAN1.CalculateTimeBitNominal=750
-FDCAN1.CalculateTimeQuantumNominal=250.0
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
+FDCAN2.CalculateBaudRateNominal=888888
+FDCAN2.CalculateTimeBitNominal=1125
+FDCAN2.CalculateTimeQuantumNominal=375.0
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH5=ENABLE
 GPDMA1.DESTDATAWIDTH_GPDMACH5=DMA_DEST_DATAWIDTH_HALFWORD
@@ -121,17 +121,18 @@ Mcu.IP12=NETXDUO
 Mcu.IP13=NVIC
 Mcu.IP14=PWR
 Mcu.IP15=RCC
-Mcu.IP16=SYS
-Mcu.IP17=THREADX
+Mcu.IP16=SPI2
+Mcu.IP17=SYS
+Mcu.IP18=THREADX
 Mcu.IP2=BOOTPATH
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=ETH
-Mcu.IP5=FDCAN1
+Mcu.IP5=FDCAN2
 Mcu.IP6=GPDMA1
 Mcu.IP7=I2C2
 Mcu.IP8=ICACHE
 Mcu.IP9=IWDG
-Mcu.IPNb=18
+Mcu.IPNb=19
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -297,10 +298,10 @@ PA1.Signal=ETH_REF_CLK
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
-PA11.Mode=FDCAN_Activate
-PA11.Signal=FDCAN1_RX
-PA12.Mode=FDCAN_Activate
-PA12.Signal=FDCAN1_TX
+PA11.Locked=true
+PA12.Locked=true
+PA12.Mode=Full_Duplex_Master
+PA12.Signal=SPI2_SCK
 PA13(JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13(JTMS/SWDIO).GPIO_Label=JTMS
 PA13(JTMS/SWDIO).Locked=true
@@ -347,7 +348,6 @@ PB1.GPIO_Label=ADC12_INP5
 PB1.Locked=true
 PB1.Signal=ADCx_INP5
 PB10.Locked=true
-PB10.Signal=SPI2_SCK
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=ETH_RMII_TXD0
 PB12.Locked=true
@@ -355,6 +355,7 @@ PB12.Mode=RMII
 PB12.Signal=ETH_TXD0
 PB13.Locked=true
 PB14.Locked=true
+PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=ETH_RMII_TXD1
@@ -368,11 +369,16 @@ PB3(JTDO/TRACESWO).Locked=true
 PB3(JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
 PB4(NJTRST).Locked=true
 PB5.Locked=true
+PB5.Mode=FDCAN_Activate
+PB5.Signal=FDCAN2_RX
 PB6.Locked=true
-PB6.Signal=I2C1_SCL
+PB6.Mode=FDCAN_Activate
+PB6.Signal=FDCAN2_TX
 PB7.Locked=true
 PB7.Signal=I2C1_SDA
 PB8.Locked=true
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=SPI2_NSS
 PB9.Locked=true
 PB9.Signal=SPI2_NSS
 PC0.GPIOParameters=GPIO_Label
@@ -601,6 +607,7 @@ PF9.Locked=true
 PF9.Signal=GPIO_Input
 PG0.Locked=true
 PG1.Locked=true
+PG1.Mode=Full_Duplex_Master
 PG1.Signal=SPI2_MOSI
 PG10.Locked=true
 PG11.GPIOParameters=GPIO_Label
@@ -668,7 +675,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_NetXDuo_Init-NETXDUO-false-HAL-false,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true,13-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -683,10 +690,10 @@ RCC.CSI_VALUE=4000000
 RCC.CortexFreq_Value=32000000
 RCC.DACFreq_Value=32768
 RCC.EPOD_VALUE=4000000
-RCC.ETHFreq_Value=64000000
+RCC.ETHFreq_Value=42666666.666666664
 RCC.FCLKCortexFreq_Value=32000000
 RCC.FDCANClockSelection=RCC_FDCANCLKSOURCE_PLL1Q
-RCC.FDCANFreq_Value=64000000
+RCC.FDCANFreq_Value=42666666.666666664
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=25000000
@@ -697,7 +704,7 @@ RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
 RCC.I2C4Freq_Value=32000000
 RCC.I3C1Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL1Q,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPTIM3Freq_Value=32000000
@@ -711,6 +718,7 @@ RCC.LSIRC_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
 RCC.MCO2PinFreq_Value=32000000
 RCC.OCTOSPIMFreq_Value=32000000
+RCC.PLL1Q=3
 RCC.PLL2PoutputFreq_Value=258000000
 RCC.PLL2QoutputFreq_Value=258000000
 RCC.PLL2RoutputFreq_Value=258000000
@@ -720,16 +728,16 @@ RCC.PLL3RoutputFreq_Value=258000000
 RCC.PLLFRACN=0
 RCC.PLLN=32
 RCC.PLLPoutputFreq_Value=64000000
-RCC.PLLQoutputFreq_Value=64000000
+RCC.PLLQoutputFreq_Value=42666666.666666664
 RCC.PWRFreq_Value=32000000
 RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=258000000
 RCC.SAI2Freq_Value=258000000
-RCC.SDMMC1Freq_Value=64000000
-RCC.SDMMC2Freq_Value=64000000
-RCC.SPI1Freq_Value=64000000
-RCC.SPI2Freq_Value=64000000
-RCC.SPI3Freq_Value=64000000
+RCC.SDMMC1Freq_Value=42666666.666666664
+RCC.SDMMC2Freq_Value=42666666.666666664
+RCC.SPI1Freq_Value=42666666.666666664
+RCC.SPI2Freq_Value=42666666.666666664
+RCC.SPI3Freq_Value=42666666.666666664
 RCC.SPI4Freq_Value=32000000
 RCC.SPI5Freq_Value=32000000
 RCC.SPI6Freq_Value=32000000
@@ -790,6 +798,12 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+SPI2.CalculateBaudRate=21.333332 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=false
